# a_STG_project_for_learning

./: .gitignore  CMakeLists.txt  README.md  test.lua
include/basicstates/: ButtonState.ipp
include/behaviors/: Behavior.h
include/behaviors/behaviors/: AimMove1.h  AimMove2.h  (+12 more)
include/bullets/: LinearBullet.h  PlayerBullet.h
include/collision/: CollisionCheck.h
include/core/: Clock.h  LuaManager.h  application.h
include/effects/: Effect.h
include/entities/: Bomb.h  Boss.h  Bullet.h  Drop.h  Enemy.h  Entity.h  LeiTan.h  Player.h
include/luas/: manual.lua  phases.lua
include/manager/: BombFactory.h  BombManager.h  BulletFactory.h  BulletManager.h  CollisionSystem.h  DropFactory.h  DropManager.h  EffectFactory.h  EffectManager.h  EnemyManager.h  PEBFactory.h  PhaseController.h  ScriptLoader.h
include/mathematics/: mathematics.h
include/overlays/: Overlay.h
include/phases/: Phase.h
include/states/: GameState.h  ManualState.h
include/ui/: Button.h
src/behaviors/: Behavior.cpp
src/bullets/: LinearBullet.cpp  PlayerBullet.cpp
src/collision/: CollisionCheck.cpp
src/core/: Clock.cpp  LuaManager.cpp  application.cpp
src/effects/: Effect.cpp
src/entities/: Bomb.cpp  Boss.cpp  Bullet.cpp  Drop.cpp  Enemy.cpp  LeiTan.cpp  Player.cpp
src/manager/: BombFactory.cpp  BombManager.cpp  BulletFactory.cpp  BulletManager.cpp  CollisionSystem.cpp  DropFactory.cpp  DropManager.cpp  EffectFactory.cpp  EffectManager.cpp  EnemyManager.cpp  PhaseController.cpp  ScriptLoader.cpp
src/mathematics/: mathematics.cpp
src/overlays/: Overlay.cpp
src/phases/: Phase.cpp
src/states/: DifficultyState.cpp  GameState.cpp  ManualState.cpp  MenuState.cpp  PauseState.cpp
src/ui/: Button.cpp  Text.cpp
(+37 files in other folders)
